dark mode adjustments on the text and fix the notice banner

--- a/dyslexia-dark.css
+++ b/dyslexia-dark.css
@@ -127,7 +127,7 @@ textarea,
 #modal, h3, .filters dt,
 .filters dd,
 .filters input[type=submit],
-.filters .expander, p.note, blockquote, body,
+.filters .expander, .userstuff h2, .userstuff h1, .userstuff h3, .userstuff h4, p.note, blockquote, body,
 input,
 .toggled form,
 .dynamic form,
@@ -315,7 +315,7 @@ textarea,
   as a measurement changes A LOT between numbers, so you might want to try
   decimals like 0.22em, 0.25em, 0.3em before going a number up (or down)
   */
-  word-spacing: 0.21em;
+  word-spacing: 0.15em;
 }
 
 .blurb dl.stats,
@@ -359,7 +359,7 @@ p.type,
   as a measurement changes A LOT between numbers, so you might want to try
   decimals like 0.025em, 0.03em, 0.035em before going a number up (or down)
   */
-  letter-spacing: 0.03em;
+  letter-spacing: 0.04em;
 }
 
 #chapters,
@@ -550,7 +550,7 @@ button,
   box-shadow: none;
 }
 
-#footer,
+.announcement blockquote.userstuff, #footer,
 .autocomplete .dropdown ul li:hover,
 li.selected,
 .autocomplete a:hover, form .notice,
@@ -872,7 +872,7 @@ span.symbol {
   vertical-align: middle;
 }
 
-.blurb .header img {
+.blurb .header img, #workskin h2.heading img {
   /* 
   Aligns vertically the little lock next to the title in the blurb
   it also gives a bit of a space enough to have a background if needed in dark mode, later
@@ -1591,7 +1591,10 @@ input[type=submit]:hover,
 .autocomplete .dropdown ul li:hover,
 li.selected, li.dropdown, .notice a,
 .notice a:link,
-.notice a:visited, .filters .expander,
+.notice a:visited,
+.announcement a,
+.announcement a:link,
+.announcement a:visited, .filters .expander,
 .filters .expanded .expander {
   /*
   Related to the previous classes, this colors the text in a way that it can 
@@ -1710,7 +1713,7 @@ form.verbose legend {
   background-color: #43566b;
 }
 
-.notice,
+.notice, .announcement,
 .comment_notice,
 ul.notes,
 .caution,
