--- a/dyslexia-lowcontrast.css
+++ b/dyslexia-lowcontrast.css
@@ -127,7 +127,7 @@ textarea,
 #modal, h3, .filters dt,
 .filters dd,
 .filters input[type=submit],
-.filters .expander, p.note, blockquote, body,
+.filters .expander, .userstuff h2, .userstuff h1, .userstuff h3, .userstuff h4, p.note, blockquote, body,
 input,
 .toggled form,
 .dynamic form,
