--- a/dyslexia.css
+++ b/dyslexia.css
@@ -127,7 +127,7 @@ textarea,
 #modal, h3, .filters dt,
 .filters dd,
 .filters input[type=submit],
-.filters .expander, p.note, blockquote, body,
+.filters .expander, .userstuff h2, .userstuff h1, .userstuff h3, .userstuff h4, p.note, blockquote, body,
 input,
 .toggled form,
 .dynamic form,
@@ -550,7 +550,7 @@ button,
   box-shadow: none;
 }
 
-#footer,
+.announcement blockquote.userstuff, #footer,
 .autocomplete .dropdown ul li:hover,
 li.selected,
 .autocomplete a:hover, form .notice,
@@ -872,7 +872,7 @@ span.symbol {
   vertical-align: middle;
 }
 
-.blurb .header img {
+.blurb .header img, #workskin h2.heading img {
   /* 
   Aligns vertically the little lock next to the title in the blurb
   it also gives a bit of a space enough to have a background if needed in dark mode, later
@@ -1587,7 +1587,10 @@ input[type=submit]:hover,
 .autocomplete .dropdown ul li:hover,
 li.selected, li.dropdown, .notice a,
 .notice a:link,
-.notice a:visited, .filters .expander,
+.notice a:visited,
+.announcement a,
+.announcement a:link,
+.announcement a:visited, .filters .expander,
 .filters .expanded .expander {
   /*
   Related to the previous classes, this colors the text in a way that it can 
